<resources>
    <string name="app_name">Take the Vaccine</string>
    <string name="score">Score : %d</string>
    <string name="tap_to_start">Tap to Start</string>

    <string name="human">TODO</string>
    <string name="vaccine">TODO</string>
    <string name="virus">TODO</string>
    <string name="mask">TODO</string>

    <string name="result_title">GAME OVER</string>
    <string name="result_score">%d</string>
    <string name="high_score">High Score : %d</string>
    <string name="get_the_vaccine_to_save_lives">GET THE VACCINE TO SAVE LIVES</string>

    <string name="try_again_btn">TRY AGAIN</string>
    <string name="point_mask">5 points</string>
    <string name="point_vaccine">10 points</string>
    <string name="point_virus">Game Over</string>

    <string name="start_btn">START</string>
    <string name="virus_icon">VIRUS</string>
    <string name="vaccine_icon">VACCINE</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="start">START</string>
    <string name="settings">SETTINGS</string>
    <string name="twitter_login">Twitter Login</string>

    <!--Settings Activity-->
    <string name="authorize">Authorize</string>
    <string name="unknown">unknown?</string>
    <string name="working">working…</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="user">user </string>
    <string name="music">Music </string>
    <string name="sounds">Sounds </string>
</resources>