<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/virus_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/mask"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/point_mask"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/vaccine_icon"
                android:src="@drawable/vaccine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/point_vaccine"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/virus_icon"
                android:src="@drawable/virus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/point_virus"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button"
        android:onClick="startGame"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:onClick="settings"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />


</LinearLayout>